drag and drop event

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Fence <fence@desu-mail.moe>"]
 
 [dependencies]
 gdk = "0.6.0"
+id3 = "0.2"
+url = "1.5.1"
 
 [dependencies.gtk]
 version = "0.2.0"
